2014-09-10  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c (get_changer_list): New function.
	* common-src/conffile.h (get_changer_list): Add protoype.
	* perl/Amanda/Config.swg (get_changer_list) Swig it.
	* perl/Amanda/Config.swg: Add new message.
	* perl/Amanda/Changer.pm: Fix typo.
	* perl/Amanda/Rest/Storages.pm: Fix typo.
	* perl/Makefile.am: Add Amanda/Rest/Changers.pm
	* perl/Amanda/Rest/Changers.pm: Add new REST API
	* installcheck/Makefile.am: Add Amanda_Rest_Changers
	* installcheck/Amanda_Rest_Changers.pl: Test the new REST API.

2014-09-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Fix for dump to tape.
	* installcheck/Amanda_Rest_Runs.pl: Fix.

2014-09-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/ScanInventory.pm: Can changer set_error_to_unknown if a
	  slot previously in error succeed.
	* perl/Amanda/Taper/Scan/lexical.pm, perl/Amanda/Taper/Scan/oldest.pm:
	  Scan one slot for each error message.
	* perl/Amanda/Changer/multi.pm (set_error_to_unknown): new function to
	  mark as unknown all slot with a given error message.

2014-09-03  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/dvdrw-device.c: dvdrw_growisofs_command,
	  dvdrw_mount_command and dvdrw_umount_command property are
	  G_TYPE_STRING.
	* installcheck/Amanda_Device.pl: Test parsing dvd properties.

2014-09-03  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c (get_openstack_swift_api_v2_setting): Set
	  hdl->x_auth_token to NULL.

2014-09-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Fix mailto allocation.

2014-09-02  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/rait-device.c: Use int value instead of pointer value.

2014-08-28  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Message.pm: 32xxxxx are for amanda-extensions.

2014-08-27  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/xfer-dest-taper-cacher.c: Cast pointer.
