@@ -84,7 +84,7 @@ AMANDA_CHECK_READDIR
 AMANDA_CHECK_DEVICE_PREFIXES
 AMANDA_SYSHACKS
 AMANDA_EXPAND_DIRS
-AMANDA_REST_HOOK
+AMANDA_EXTENSIONS_HOOK
 
 #
 # Security (authentication) mechansims
