@@ -90,7 +90,7 @@ $LPRFLAG = "@LPRFLAG@";
 $PS = "@PS@";
 $PS_ARGUMENT = "@PS_ARGUMENT@";
 $PS_ARGUMENT_ARGS = "@PS_ARGUMENT_ARGS@";
-$REST_HOOK_DIR = "@REST_HOOK_DIR@";
+$REST_EXTENSIONS_DIR = "@REST_EXTENSIONS_DIR@";
 $RESTORE = "@RESTORE@";
 $RSH_SECURITY = "@RSH_SECURITY@";
 $SAMBA_CLIENT = "@SAMBA_CLIENT@";
